--- a/web-start/public/styles/main.css
+++ b/web-start/public/styles/main.css
@@ -124,7 +124,7 @@ main, #messages-card {
   min-height: 0;
 }
 .mdl-card {
-  background: linear-gradient(white, #f9f9f9);
+  background: linear-gradient(grey, black);
   justify-content: space-between;
 }
 #user-container {
@@ -177,7 +177,7 @@ main, #messages-card {
   }
   #user-container {
     top: 72px;
-    background-color: rgb(3,155,229);
+    background-color: rgb(31,102,0);
     height: 38px;
     padding-top: 3px;
     padding-right: 2px;
