--- a/web-start/public/styles/main.css
+++ b/web-start/public/styles/main.css
@@ -18,7 +18,7 @@
   font-family: 'Roboto', 'Helvetica', sans-serif;
 }
 main, #messages-card {
-  height: 100%;
+  height: 150%;
   padding-bottom: 0;
 }
 #messages-card-container {
@@ -26,7 +26,7 @@ main, #messages-card {
   padding-bottom: 0;
 }
 #messages-card {
-  margin-top: 15px;
+  margin-top: 10px;
 }
 .mdl-layout__header-row span {
   margin-left: 15px;
@@ -67,13 +67,13 @@ main, #messages-card {
 .message-container {
   display: block;
   margin-top: 10px;
-  border-top: 1px solid #f3f3f3;
+  border-top: 1px solid #c0c0c0;
   padding-top: 10px;
   opacity: 0;
   transition: opacity 1s ease-in-out;
 }
 .message-container.visible {
-  opacity: 1;
+  opacity: 2;
 }
 .message-container .pic {
   background-image: url('/images/profile_placeholder.png');
@@ -96,7 +96,7 @@ main, #messages-card {
   display: inline-block;
   width: 100%;
   padding-left: 40px;
-  color: #bbb;
+  color: rgb(255, 255, 255);
   font-style: italic;
   font-size: 12px;
   box-sizing: border-box;
@@ -124,7 +124,7 @@ main, #messages-card {
   min-height: 0;
 }
 .mdl-card {
-  background: linear-gradient(grey, black);
+  background: linear-gradient(rgb(66, 66, 66), #e2e2e2);
   justify-content: space-between;
 }
 #user-container {
@@ -177,7 +177,7 @@ main, #messages-card {
   }
   #user-container {
     top: 72px;
-    background-color: rgb(31,102,0);
+    background-color: rgb(117, 41, 41);
     height: 38px;
     padding-top: 3px;
     padding-right: 2px;
